# QDesktopMascot

./: CMakeLists.txt  DesktopLauncher.cpp  DesktopLauncher.h  DesktopMascot.cpp  DesktopMascot.h  FieldObject.h  LeapController.cpp  LeapController.h  LeapMotion.h  ProgramList.txt  README.md  main.cpp
